--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "parcel": "^2.8.3",
     "postcss": "^8.4.21",
     "process": "^0.11.10",
+    "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1"
   },
