--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
