fix: Fixed parcel build issues

--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "source": "src/index.html",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "test": "jest --watch",
     "start": "parcel --no-cache",
-    "build": "parcel build"
+    "build": "parcel build src/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -28,16 +27,16 @@
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "localforage": "^1.10.0",
     "parcel": "^2.8.3",
     "postcss": "^8.4.21",
     "process": "^0.11.10",
-    "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "localforage": "^1.10.0"
   }
 }
